Fixed align

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,6 +110,7 @@ body {
     .sub-title {
       font-size: 1.8rem;
       text-transform: uppercase;
+      text-align: center;
     }
   }
   .bottom-hero {
